# GeneticAlgorithmPython

./: .gitignore  README.md  pyproject.toml
src/: BrachFitness.py  SGA_BC.py  main.py
